【fix】修复websocket 前后端不通的问题： 1. nginx.conf 中要配置 ws 的代理，传递客户端的 Upgrade 头和 Connection 头； 2. 后台容器添加 Traefik 支持 Websocket 升级的中间件； 3. 后台API 增加调试路由，获取 websocket 调试信息； 4. 去除 websocket_handler.go 中的 token 验证； 5.
